tests/should_fail/fn_closure_missing_return.nv
module main

// SHOULD FAIL: fn closure (fn() -> T) declared without return when T is non-void
// inner closure fn() -> Int with no return statement
let f = fn() -> Int {
    println("no return here")
}
println(f())
